--- a/templates/index.html
+++ b/templates/index.html
@@ -12,54 +12,65 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 
 <script>
- const preciosProductos = {
-    "Agua saborizada Naranja 3000ml": 3000,
-    "Agua saborizada Naranja 1600ml": 1600,
-    "Agua sin gas 2500ml": 2500,
-    "Agua sin gas 1600ml": 1600,
-    "Baguette Tradicional": 500,
-    "BBQ Casera BBQ": 1500,
-    "Champagne Brut Nature": 10000,
-    "Cerveza Blond Ale": 2400,
-    "Cerveza Porter": 2400,
-    "Cerveza Scottish": 2400,
-    "Vino Blanco Chardonay Orgánico": 8000,
-    "Coca Cola Común 2L": 4000,
-    "Coca Cola Común 500ml": 1800,
-    "Coca Cola Zero 500ml": 1800,
-    "Cordero Braseado Desmechado": 7500,
-    "Criolla Casera": 1500,
-    "Empanadas Ternera Suave": 1900,
-    "Empanadas Cordero": 1900,
+const preciosProductos = {
+    "Agua saborizada Naranja 1500cc": 3000,
+    "Agua saborizada Naranja 500cc": 1600,
+    "Agua sin gas 1500cc": 2500,
+    "Agua sin gas 500cc": 1600,
+    "Baguette Tradicional (1u)": 500,
+    "BBQ Casera (100cc)": 1500,
+    "Champagne Brut Nature (750ml)": 10000,
+    "Cerveza Blond Ale (473ml)": 2400,
+    "Cerveza Porter (473ml)": 2400,
+    "Cerveza Scottish (473ml)": 2400,
+    "Vino Blanco Chardonay Orgánico (750ml)": 8000,
+    "Coca Cola Común (1500cc)": 4000,
+    "Coca Cola Común (500cc)": 1800,
+    "Coca Cola Zero (500cc)": 1800,
+    "Cordero Braseado Desmechado (400g)": 7500,
+    "Criolla Casera (100cc)": 1500,
+    "Empanadas Ternera Suave (1u)": 1900,
+    "Empanadas Cordero (1u)": 1900,
     "Empanadas Congeladas Cordero (12u)": 22800,
     "Empanadas Congeladas Carne (12u)": 22800,
-    "Empanadas Espinaca": 1900,
+    "Empanadas Espinaca (1u)": 1900,
     "Empanadas Congeladas Espinaca (12u)": 22800,
-    "Empanadas Jamón y Queso": 1900,
+    "Empanadas Jamón y Queso (1u)": 1900,
     "Empanadas Congeladas Jamón y Queso (12u)": 22800,
     "Empanadas Congeladas Mozarella y Cebolla (12u)": 22800,
-    "Empanadas Mozarella y Cebolla": 1900,
+    "Empanadas Mozarella y Cebolla (1u)": 1900,
     "Empanadas Congeladas Pollo (12u)": 22800,
-    "Empanadas Pollo": 1900,
-    "Hamburguesa Novillo (2x)": 7200,
-    "Hamburguesa Congeladas Crudas Cordero (2x)": 7500,
-    "Hamburguesa Congeladas Crudas Novillo (2x)": 7500,
-    "Helado Chocolate con Almendras": 5800,
-    "Helado Dulce de Leche": 5800,
-    "Helado Lemon Pie": 5800,
-    "Helado Mascarpone": 5800,
-    "Huevos de Campo (12u)": 2200,
-    "Huevos de Campo (30u)": 4400,
-    "Huevos de Campo (60u)": 8700,
-    "Vino Malbec Orgánico": 8000,
-    "Mayo de Morrón Casera": 1500,
-    "Mignon Casero": 300,
-    "Novillo Braseado Desmechado": 8000,
-    "Pollo Braseado Desmechado": 8000,
-    "Queso con Ciboulette": 1500,
-    "Vino Rosado Orgánico": 8000,
-    "Sándwich de Milanesa": 7200,
-    "Sidra Red Delicious": 2400
+    "Empanadas Pollo (1u)": 1900,
+    "Hamburguesa Novillo (1u)": 7200,
+    "Hamburguesa Congeladas Crudas Cordero (4u)": 7500,
+    "Hamburguesa Congeladas Crudas Novillo (4u)": 7500,
+    "Helado Chocolate con Almendras (250g)": 5800,
+    "Helado Dulce de Leche (250g)": 5800,
+    "Helado Lemon Pie (250g)": 5800,
+    "Helado Mascarpone (250g)": 5800,
+    "Huevos de Campo (6u)": 2200,
+    "Huevos de Campo (12u)": 4400,
+    "Huevos de Campo (30u)": 8700,
+    "Vino Malbec Orgánico (750ml)": 8000,
+    "Mayo de Morrón Casera (100cc)": 1500,
+    "Mignon Casero (1u)": 300,
+    "Novillo Braseado Desmechado (400g)": 8000,
+    "Pollo Braseado Desmechado (400g)": 8000,
+    "Queso con Ciboulette (100cc)": 1500,
+    "Vino Rosado Orgánico (750ml)": 8000,
+    "Sándwich de Milanesa (1u)": 7200,
+    "Sidra Red Delicious (473cc)": 2400,
+    "Filet de Pechuga (1kg)": 7000,
+    "Pata Muslo (1kg)": 4000,
+    "Pollo Entero (1u)": 11600,
+    "Sándwichitos (Veggie 1) (5u)": 28600,
+    "Sprite Familiar (1500cc)": 4000,
+    "Sprite Individual (500cc)": 1800,
+    "Triples Jamón Cocido y Queso (1u)": 1000,
+    "Triples Jamón Crudo y Queso (1u)": 1000,
+    "Triples Peceto (1u)": 1000,
+    "Triples Vegetarianos (1u)": 1000,
+    "Vegetales Salteados (1u)": 5000
 };
 
     
