--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,9 @@ const preciosProductos = {
     "Triples Jamón Crudo y Queso (1u)": 1000,
     "Triples Peceto (1u)": 1000,
     "Triples Vegetarianos (1u)": 1000,
-    "Vegetales Salteados (1u)": 5000
+    "Vegetales Salteados (1u)": 5000,
+    "Tira de Asado (1kg)": 8000,
+    "Milanesas de Novillo (1kg)": 10000
 };
 
     
