--- a/templates/index.html
+++ b/templates/index.html
@@ -159,6 +159,8 @@ const preciosProductos = {
             <input type="text" name="direccion" required>
             <p>Teléfono:</p>
             <input type="text" name="telefono" required>
+            <p>Fecha que se hizo el Pedido:</p>
+            <input type="date" name="fecha_pedido" required>
             <p>Fecha de Entrega:</p>
             <input type="date" name="fecha_entrega" required>
             <p>Horario de Entrega:</p><select name="horario_entrega">
