--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   margin: 0 auto;
   text-align: center;
@@ -7,6 +6,8 @@ body {
   font-style: normal;
   background-color: #881d1d;
   color: #030303; }
+  body a {
+    color: #fcfcfc; }
   body form {
     width: 80%;
     padding: 20px;
@@ -33,7 +34,8 @@ body {
       body input[type=submit]:hover {
         background-color: #881d1d; }
     body input button {
-      border-radius: 5px; }
+      border-radius: 5px;
+      cursor: pointer; }
   body select {
     border: 1px solid #881d1d;
     background-color: #fcfcfc;
@@ -47,11 +49,15 @@ body {
   body h2 {
     font-optical-sizing: auto;
     font-weight: 600;
-    font-style: normal; }
+    font-style: normal;
+    color: #fcfcfc; }
   body hr {
     margin: 0;
     padding: 0;
     width: 100%; }
+
+.header {
+  color: #fcfcfc; }
 
 .productos {
   width: 90%;
@@ -119,30 +125,69 @@ body {
     .product-quantity button:hover {
       background-color: #881d1d; }
 
-/* 🔹 Navbar Estilos */
 .navbar {
-  background-color: #333;
-  /* Color de fondo */
+  background-color: #444343;
   padding: 10px 0;
   text-align: center; }
+  .navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0; }
+    .navbar ul li {
+      display: inline;
+      margin-right: 20px; }
+      .navbar ul li a {
+        color: #fcfcfc;
+        text-decoration: none;
+        font-size: 18px;
+        font-weight: bold;
+        padding: 10px 15px;
+        transition: background 0.3s; }
+        .navbar ul li a:hover {
+          background-color: #444343;
+          border-radius: 5px; }
 
-.navbar ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0; }
-
-.navbar ul li {
-  display: inline;
-  margin-right: 20px; }
-
-.navbar ul li a {
-  color: white;
-  text-decoration: none;
-  font-size: 18px;
-  font-weight: bold;
-  padding: 10px 15px;
-  transition: background 0.3s; }
-
-.navbar ul li a:hover {
-  background-color: #575757;
+.login {
+  width: fit-content;
+  display: grid;
+  margin: 10rem auto;
+  gap: 1.5rem;
+  padding: 1.5rem;
+  background-color: #fcfcfc;
+  color: #030303;
   border-radius: 5px; }
+  .login h2 {
+    margin: auto;
+    color: #881d1d; }
+  .login form {
+    display: grid;
+    margin: auto;
+    padding: 0;
+    justify-items: start;
+    justify-content: center;
+    background-color: transparent;
+    border: none;
+    box-shadow: none; }
+    .login form button {
+      width: 100%;
+      padding: 0.7rem;
+      border-radius: 5px;
+      background-color: #881d1d;
+      margin-top: 1rem;
+      color: #fcfcfc;
+      border: 1px solid #881d1d;
+      transition: all 0.4s; }
+      .login form button:hover {
+        background-color: #fcfcfc;
+        color: #881d1d;
+        border: 1px solid #881d1d;
+        transition: all 0.3s; }
+    .login form input {
+      margin-bottom: 0.5rem;
+      padding: 0.5rem; }
+
+.pedidos_table {
+  display: flex;
+  justify-content: center;
+  color: #fcfcfc;
+  padding: 1rem; }
