actualizacion de precios miercoles 12, agragado milanesade peseto y fritas

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,10 @@ const preciosProductos = {
     "Huevos Campo (6u)": 2300,
     "Mayo Morrón (100cc)": 1500,
     "Mignon (1u)": 300,
-    "Milanesas Novillo (1kg)": 10000,
+    "Milanesas Bife Angosto (1kg)": 12000,
+    "Milanesas Finita Peceto (1kg)": 12000,
     "Novillo Desmechado (400g)": 8000,
+    "Papas Fritas": 1500,
     "Pata Muslo (2u)": 4500,
     "Picada Premium (1u)": 23000,
     "Picada Quesos (1u)": 20000,
