--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <title>Login</title>
     <link rel="stylesheet" href=/static/css/styles.css>
+    <link rel="icon" href="../static/images/ico-dorado.ico" type="image/x-icon">
 </head>
 <body>
     <div class="login">
